--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 
 th {
-    text-align: center;
+  text-align: center;
 }
 
 td {
-    text-align: center;
+  text-align: center;
 }
 
 .thumbnail {
-    height: "100";
+  height: "100";
+  max-height: "100px"
 }
