--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
 
-th {
+td, th {
   text-align: center;
 }
 
-td {
-  text-align: center;
-}
-
-.thumbnail {
+.thumbnail img {
   height: "100px";
   max-height: "100px"
 }
